package edu.mum.cs.cs525.labs.lab4;

public interface Observer {
    public void update(EnvironmentType type);
}
